--- a/hassio-hotspot/config.json
+++ b/hassio-hotspot/config.json
@@ -39,6 +39,10 @@
     "dhcp_enable": true,
     "dhcp_start": "192.168.2.100",
     "dhcp_end": "192.168.2.200",
+    "allow_mac_addresses": [],
+    "deny_mac_addresses": [],
+    "hostapd_config_override": [],
+    "client_dns_override": []
     "dhcp_dns": "1.1.1.1",
     "dhcp_subnet": "255.255.255.0",
     "dhcp_router": "192.168.2.1",
@@ -57,6 +61,10 @@
     "dhcp_enable": "bool",
     "dhcp_start": "str",
     "dhcp_end": "str",
+    "allow_mac_addresses": ["str"],
+    "deny_mac_addresses": ["str"],
+    "hostapd_config_override": ["str"],
+    "client_dns_override": ["str"]
     "dhcp_dns": "str",
     "dhcp_subnet": "str",
     "dhcp_router": "str",
