--- a/hassio-hotspot/hostapd.conf
+++ b/hassio-hotspot/hostapd.conf
@@ -8,7 +8,10 @@ hw_mode=g
 ieee80211n=1
 
 # QoS support, also required for full speed on 802.11n/ac/ax
-wmm_enabled=0
+wmm_enabled=1
+
+# Enable 40MHz channels with 20ns guard interval
+ht_capab=[HT40+][SHORT-GI-20][SHORT-GI-40][DSSS_CCK-40]
 
 # Accept all MAC addresses
 macaddr_acl=0
@@ -29,10 +32,10 @@ ignore_broadcast_ssid=0
 wpa=2
 
 # Use a pre-shared key
-wpa_key_mgmt=WPA-PSK
+wpa_key_mgmt=WPA-PSK WPA-PSK-SHA256 SAE
 
 # Use AES, instead of TKIP
-rsn_pairwise=CCMP
+rsn_pairwise=CCMP CCMP-256
 
 # hostapd event logger configuration
 logger_stdout=-1
