--- a/hassio-hotspot/config.json
+++ b/hassio-hotspot/config.json
@@ -29,16 +29,16 @@
   "options": {
     "ssid": "",
     "wpa_passphrase": "",
-    "channel": "0",
+    "channel": "1",
     "address": "192.168.2.1",
     "netmask": "255.255.255.0",
     "broadcast": "192.168.2.254",
-    "interface": "",
-    "internet_interface": "eth0",
-    "allow_internet": false,
+    "interface": "wlo2",
+    "internet_interface": "eno1",
+    "allow_internet": true,
     "dhcp_enable": true,
-    "dhcp_start": "192.168.2.100",
-    "dhcp_end": "192.168.2.200",
+    "dhcp_start": "192.168.2.2",
+    "dhcp_end": "192.168.2.10",
     "dhcp_dns": "1.1.1.1",
     "dhcp_subnet": "255.255.255.0",
     "dhcp_router": "192.168.2.1",
