--- a/hassio-hotspot/hostapd.conf
+++ b/hassio-hotspot/hostapd.conf
@@ -32,7 +32,7 @@ ignore_broadcast_ssid=0
 wpa=2
 
 # Use a pre-shared key
-wpa_key_mgmt=WPA-PSK WPA-PSK-SHA256 SAE
+wpa_key_mgmt=WPA-PSK WPA-PSK-SHA256
 
 # Use AES, instead of TKIP
 rsn_pairwise=CCMP CCMP-256
