--- a/hassio-hotspot/hostapd.conf
+++ b/hassio-hotspot/hostapd.conf
@@ -11,7 +11,7 @@ ieee80211n=1
 wmm_enabled=1
 
 # Enable 40MHz channels with 20ns guard interval
-ht_capab=[HT40+][SHORT-GI-20][SHORT-GI-40][DSSS_CCK-40]
+ht_capab=[HT40][SHORT-GI-20][SHORT-GI-40][DSSS_CCK-40]
 
 # Accept all MAC addresses
 macaddr_acl=0
