--- a/hassio-hotspot/hostapd.conf
+++ b/hassio-hotspot/hostapd.conf
@@ -26,7 +26,7 @@ wpa=2
 wpa_key_mgmt=WPA-PSK WPA-PSK-SHA256
 
 # Use AES, instead of TKIP
-rsn_pairwise=CCMP CCMP-256
+rsn_pairwise=CCMP
 
 # hostapd event logger configuration
 logger_stdout=-1
