--- a/hassio-hotspot/hostapd.conf
+++ b/hassio-hotspot/hostapd.conf
@@ -26,7 +26,7 @@ wpa=2
 wpa_key_mgmt=WPA-PSK WPA-PSK-SHA256
 
 # Enable 40MHz channels with 20ns guard interval
-ht_capab=[HT40][SHORT-GI-20][SHORT-GI-40][DSSS_CCK-40]
+ht_capab=[HT40+][SHORT-GI-20][SHORT-GI-40][DSSS_CCK-40]
 
 # Use AES, instead of TKIP
 rsn_pairwise=CCMP
