--- a/hassio-hotspot/hostapd.conf
+++ b/hassio-hotspot/hostapd.conf
@@ -23,7 +23,7 @@ ignore_broadcast_ssid=0
 wpa=2
 
 # Use a pre-shared key
-wpa_key_mgmt=WPA-PSK-SHA256
+wpa_key_mgmt=WPA-PSK WPA-PSK-SHA256
 
 # Enable 40MHz channels with 20ns guard interval
 ht_capab=[HT40+][SHORT-GI-20][SHORT-GI-40][DSSS_CCK-40]
