--- a/hassio-hotspot/hostapd.conf
+++ b/hassio-hotspot/hostapd.conf
@@ -29,7 +29,7 @@ wpa_key_mgmt=WPA-PSK
 ht_capab=[HT40+][SHORT-GI-20][SHORT-GI-40][DSSS_CCK-40]
 
 # Use AES, instead of TKIP
-rsn_pairwise=CCMP CCMP-256
+rsn_pairwise=CCMP
 
 # hostapd event logger configuration
 logger_stdout=-1
