--- a/hassio-hotspot/config.json
+++ b/hassio-hotspot/config.json
@@ -36,6 +36,8 @@
     "interface": "wlo2",
     "internet_interface": "eno1",
     "allow_internet": true,
+    "allow_mac_addresses": [],
+    "deny_mac_addresses": [],
     "dhcp_enable": true,
     "dhcp_start": "192.168.2.2",
     "dhcp_end": "192.168.2.10",
@@ -54,6 +56,8 @@
     "interface": "str",
     "internet_interface": "str",
     "allow_internet": "bool",
+    "allow_mac_addresses": ["str"],
+    "deny_mac_addresses": ["str"],
     "dhcp_enable": "bool",
     "dhcp_start": "str",
     "dhcp_end": "str",
